<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.UploadActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="ContentDescription,MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginEnd="15dp"
                android:importantForAccessibility="no"
                android:text="@string/open_camera"
                app:icon="@drawable/ic_camera"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginStart="15dp"
                android:importantForAccessibility="no"
                android:text="@string/select_from_gallery"
                app:icon="@drawable/ic_gallery"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_description"
                android:layout_width="match_parent"
                android:layout_height="190dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/upload_btn"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:importantForAccessibility="no"
            android:text="@string/upload_story"
            app:icon="@drawable/ic_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>